--- a/Lenskart/Base.lproj/Main.storyboard
+++ b/Lenskart/Base.lproj/Main.storyboard
@@ -30,6 +30,7 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="A60-b7-iaO">
                                                     <rect key="frame" x="10" y="10" width="94" height="129"/>
                                                     <constraints>
+                                                        <constraint firstAttribute="width" constant="94" id="Rjg-ez-53z"/>
                                                         <constraint firstAttribute="width" secondItem="A60-b7-iaO" secondAttribute="height" multiplier="94:129" id="Ufk-73-iZn"/>
                                                     </constraints>
                                                 </imageView>
